enable checkstyle globally and fix issues