@@ -1,16 +1,16 @@
-package com.taxonic.carml.rdf_mapper.util;
+package com.taxonic.carml.rdfmapper.util;
 
 import static java.util.Objects.requireNonNull;
 
-import com.google.common.collect.ImmutableSet;
-import com.taxonic.carml.rdf_mapper.Mapper;
-import com.taxonic.carml.rdf_mapper.impl.CarmlMapper;
-import com.taxonic.carml.rdf_mapper.impl.MappingCache;
+import com.taxonic.carml.rdfmapper.Mapper;
+import com.taxonic.carml.rdfmapper.impl.CarmlMapper;
+import com.taxonic.carml.rdfmapper.impl.MappingCache;
 import java.util.HashSet;
 import java.util.Set;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.UnaryOperator;
+import java.util.stream.Collectors;
 import org.eclipse.rdf4j.model.Model;
 import org.eclipse.rdf4j.model.Namespace;
 import org.eclipse.rdf4j.model.Resource;
@@ -18,25 +18,36 @@ import org.eclipse.rdf4j.repository.Repository;
 
 public class RdfObjectLoader {
 
-  private static final String RESOURCE_SELECTOR_MSG = "A resource selector must be provided",
-      CLASS_MSG = "A class must be provided", MODEL_MSG = "A model must be provided",
-      MODEL_ADAPTER_MSG = "A model adapter must be provided", REPOSITORY_MSG = "A repository must be provided",
-      SPARQL_QUERY_MSG = "A SPARQL query must be provided", POPULATE_CACHE_MSG = "A cache populator must be provided";
+  private static final String RESOURCE_SELECTOR_MSG = "A resource selector must be provided";
+
+  private static final String CLASS_MSG = "A class must be provided";
+
+  private static final String MODEL_MSG = "A model must be provided";
+
+  private static final String MODEL_ADAPTER_MSG = "A model adapter must be provided";
+
+  private static final String REPOSITORY_MSG = "A repository must be provided";
+
+  private static final String SPARQL_QUERY_MSG = "A SPARQL query must be provided";
+
+  private static final String POPULATE_CACHE_MSG = "A cache populator must be provided";
+
+  private static final Consumer<MappingCache> DEFAULT_POPULATE_CACHE = mappingCache -> {
+  };
+
+  private static final Consumer<Mapper> DEFAULT_CONFIGURE_MAPPER = mapper -> {
+  };
 
   private RdfObjectLoader() {}
 
   public static <T> Set<T> load(Function<Model, Set<Resource>> resourceSelector, Class<T> clazz, Model model) {
 
-    return load(resourceSelector, clazz, model, m -> m, c -> {
-    }, m -> {
-    });
+    return load(resourceSelector, clazz, model, m -> m, DEFAULT_POPULATE_CACHE, DEFAULT_CONFIGURE_MAPPER);
   }
 
   public static <T> Set<T> load(Function<Model, Set<Resource>> resourceSelector, Class<T> clazz, Model model,
       UnaryOperator<Model> modelAdapter) {
-    return load(resourceSelector, clazz, model, modelAdapter, c -> {
-    }, m -> {
-    });
+    return load(resourceSelector, clazz, model, modelAdapter, DEFAULT_POPULATE_CACHE, DEFAULT_CONFIGURE_MAPPER);
   }
 
   public static <T> Set<T> load(Function<Model, Set<Resource>> resourceSelector, Class<T> clazz, Model model,
@@ -61,8 +72,8 @@ public class RdfObjectLoader {
     Set<Resource> resources = resourceSelector.apply(model);
 
     return resources.stream()
-        .<T>map(r -> mapper.map(modelAdapter.apply(model), r, ImmutableSet.of(clazz)))
-        .collect(ImmutableSet.toImmutableSet());
+        .<T>map(r -> mapper.map(modelAdapter.apply(model), r, Set.of(clazz)))
+        .collect(Collectors.toUnmodifiableSet());
   }
 
   public static <T> Set<T> load(Function<Model, Set<Resource>> resourceSelector, Class<T> clazz, Repository repository,
@@ -79,9 +90,7 @@ public class RdfObjectLoader {
 
     Model model = QueryUtils.getModelFromRepo(repository, sparqlQuery);
 
-    return load(resourceSelector, clazz, model, modelAdapter, c -> {
-    }, m -> {
-    });
+    return load(resourceSelector, clazz, model, modelAdapter, DEFAULT_POPULATE_CACHE, DEFAULT_CONFIGURE_MAPPER);
   }
 
   public static <T> Set<T> load(Function<Model, Set<Resource>> resourceSelector, Class<T> clazz, Repository repository,
@@ -97,9 +106,7 @@ public class RdfObjectLoader {
 
     Model model = QueryUtils.getModelFromRepo(repository, contexts);
 
-    return load(resourceSelector, clazz, model, modelAdapter, c -> {
-    }, m -> {
-    });
+    return load(resourceSelector, clazz, model, modelAdapter, DEFAULT_POPULATE_CACHE, DEFAULT_CONFIGURE_MAPPER);
   }
 
 }
